--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-website-demo",
+  "name": "henryfbp-personal-website-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
