--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "/",
   "author": "Henry Post",
   "description": "https://github.com/HenryFBP",
-  "license": "idk lol",
+  "license": "just link to my website if you use my code <3",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
