--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "/",
   "author": "Henry Post",
   "description": "https://github.com/HenryFBP",
-  "license": "just link to my website if you use my code <3",
+  "license": "just link to my github if you use my code <3",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
