--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-vertical-timeline-component": "^3.5.2",
+    "sass": "^1.54.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
