--- a/package.json
+++ b/package.json
@@ -7,13 +7,6 @@
   "description": "https://github.com/HenryFBP",
   "license": "just link to my github if you use my code <3",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.47",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.0",
     "js-yaml": "^3.14.1",
     "lodash": "^4.17.21",
@@ -21,16 +14,24 @@
     "primereact": "^8.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-business-card-hfbp": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
-    "react-vertical-timeline-component": "^3.5.2",
+    "react-vertical-timeline-component": "^3.5.2"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.47",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "sass": "^1.54.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
