--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "eslint": "^8.22.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.54.5",
     "typescript": "^4.7.4",
@@ -36,6 +37,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
