--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-business-card-hfbp": "^2.0.2",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
