--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "license": "just link to my github if you use my code <3",
   "dependencies": {
     "bootstrap": "^5.2.0",
+    "front-matter": "^4.0.2",
     "js-yaml": "^3.14.1",
     "lodash": "^4.17.21",
+    "markdown-to-jsx": "^7.1.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
